Fix spacing of horizontal scrollbar
Because the horizontal spacebar was to close to the edge of the window
it would be sometimes hard to click

--- a/web/htdocs/themes/modern-dark/scss/_variables.scss
+++ b/web/htdocs/themes/modern-dark/scss/_variables.scss
@@ -84,6 +84,7 @@ $theme-border-radius: 4px;
 $spacing: 10px;
 $spacing-half: (0.5 * $spacing);
 $spacing-quarter: (0.25 * $spacing);
+$spacing-double: (2 * $spacing);
 $menu-item-spacing: (2.2 * $spacing);
 $single-column-mega-menu: 340px;
 
